Refactor into modules - part 1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,24 @@
-add_executable(tama main.c)
+set(Sources
+    main.c
+    ast.c
+    memory.c
+    token.c
+    byte_array.c
+    assembler.c
+    error.c
+    )
+
+set(Headers
+    ast.h
+    memory.h
+    token.h
+    byte_array.h
+    assembler.h
+    error.h
+    )
+
+add_executable(
+    tama
+    ${Headers}
+    ${Sources}
+    )
