Moved more code into own module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(Sources
     byte_array.c
     assembler.c
     error.c
+    compiler.c
     )
 
 set(Headers
@@ -15,6 +16,7 @@ set(Headers
     byte_array.h
     assembler.h
     error.h
+    compiler.h
     )
 
 add_executable(
