--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(tama)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 20)
 add_compile_options(-Wall -Wextra -pedantic -pthread)
-#add_definitions(-w) #hide all warnings for now to fix errors when converting to c++
+add_definitions(-w) #hide all warnings for now to fix errors when converting to c++
 add_link_options(-pthread)
 add_subdirectory(src)
