basic blocks and control-flow graph

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set(Sources
     x86_generator.cpp
     x86_frame.cpp
     utility.cpp
+    ControlFlowGraph.cpp
     )
 
 set(Headers
@@ -35,6 +36,7 @@ set(Headers
     x86_generator.hpp
     utility.hpp
     symbol.hpp
+    ControlFlowGraph.hpp
     )
 
 add_executable(
